:bug: (frontend): Fixed iOS Safari covering the bottom of the page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,13 +6,14 @@ body {
 
 html,
 body {
+  height: 100%;
   position: fixed;
   overflow: hidden;
 }
 
 body > #root {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch; /* enables “momentum” (smooth) scrolling */
 }
